--- a/freelance-tree-main/index.html
+++ b/freelance-tree-main/index.html
@@ -20,6 +20,7 @@
             <button class="submenubtn">Categories &darr;</button>
             <nav class="submenu-items" id="subnav">
                 <a href="categorias/digital_marketing.html">Digital Marketing</a>
+                <a href="categorias/digital_marketing.html">Negotiation</a>
                 <a href="categorias/graphics_design.html">Graphics & Design</a>
                 <a href="categorias/music_audio.html">Music & Audio </a>
                 <a href="categorias/video_animation.html">Video & Animation</a>
