--- a/freelance-tree-main/client.html
+++ b/freelance-tree-main/client.html
@@ -30,7 +30,7 @@
         <a href="index.html">Home</a>
     </nav>
     <header>
-        <h1>Freelance Tree</h1>
+        <h1>Freelance Treeeees</h1>
     </header>
     <main>
         <section class="user">
